File name bugfix p3

--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - LearnEnglish</title>
     <link rel="icon" href="images/loginicon.png">
-    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/mo.css">
-    <link rel="stylesheet" href="CSS/login.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
