--- a/sell.html
+++ b/sell.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses - LearnEnglish</title>
     <link rel="icon" href="images/courseicon.jpg">
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/sell.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/sell.css">
     <link rel="stylesheet" href="css/mo.css">
     <!-- For Arabic fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
