Design improvements, active state for navbar links

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
             <a href="index.html"><span class="headerH1">Learn<bold>English</bold></span></a>
         </div>
     <a href="sell.html" class="menu__link">حجز الكورسات</a>
-    <a href="dashboard.html" class="menu__link">صفحة الطالب</a>
+    <a href="dashboard.html" class="menu__link" id="currentPage">صفحة الطالب</a>
     <div class="headerEnd">
         <a href="login.html" class="menu__link" id="CTA">
             <span class="CTA">تسجيل الدخول</span>
@@ -25,6 +25,8 @@
 
 <div class="dashboardMain">
     
+  <h1 class="dashboardName" dir="rtl">الأسم: محمد خالد أحمد</h1>
+  <h1 class="dashboardName" dir="rtl">الصف: الثالث الثانوي</h1>
     <div class="dashboardHeader" dir="rtl">درجات الطالب</div>
     <table>
         <tr>
@@ -52,7 +54,7 @@
             <td>الأربعاء 2/25/2022</td>
           </tr>
           <tr>
-            <td>10/10</td>
+            <td>0/10</td>
             <td>الأحد&nbsp&nbsp&nbsp 3/1/2022</td>
           </tr>
           <tr>
