--- a/login.html
+++ b/login.html
@@ -23,13 +23,13 @@
     <a href="#" class="menu__link">صفحة الطالب</a>
     <div class="headerEnd">
         <a href="login.html" class="menu__link" id="CTA">
-            <span class="CTA">تسجيل الدخول</span>
+            <span class="CTA" id="currentPage">تسجيل الدخول</span>
         </a>
     </div>
 </header>
     <div class="main">
         <div class="heading"><span>login</span></div>
-        <form action="sell.html">
+        <form action="dashboard.html">
             <input type="email" required placeholder="Email" class="input-box" name="Email" />
             <input type="password" required placeholder="Password" class="input-box" name="Password" />
             <div class="checkbox1">
