--- a/sell.html
+++ b/sell.html
@@ -23,7 +23,7 @@
         <div class="headerStart">
             <a href="index.html"><span class="headerH1">Learn<bold>English</bold></span></a>
         </div>
-    <a href="sell.html" class="menu__link">حجز الكورسات</a>
+    <a href="sell.html" class="menu__link" id="currentPage">حجز الكورسات</a>
     <a href="dashboard.html" class="menu__link">صفحة الطالب</a>
     <div class="headerEnd">
         <a href="login.html" class="menu__link" id="CTA">
@@ -45,7 +45,7 @@
 
             </p>
             <span class="price">150 EGP</span>
-            <input type="button" value="احجز الأن" />
+            <a href="login.html" class="buyCourse">احجز الأن</a>
         </div>
         <div class="cotainer secondCont" id="2S">
             <img src="images/course.jpg" alt="can't find for some reason" id="im2" />
@@ -55,7 +55,7 @@
                 <span>للصف الثانى الثانوى</span>
             </p>
             <span class="price">150 EGP</span>
-            <input type="button" value="احجز الأن" />
+            <a href="login.html" class="buyCourse">احجز الأن</a>
         </div>
         <div class="cotainer" id="3S">
             <img src="images/course.jpg" alt="can't find for some reason" />
@@ -65,7 +65,7 @@
                 <span>للصف الثالث الثانوى</span>
             </p>
             <span class="price">150 EGP</span>
-            <input type="button" value="احجز الأن" />
+            <a href="login.html" class="buyCourse">احجز الأن</a>
         </div>
     </div>
     <footer>
